# PromptDefender-py

./: .coverage  .coveragerc  .gitignore  Makefile  README.md  auto_readme.py  auto_test_generation.py  example.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_generation_config.yaml
.github/workflows/: deploy-prod.yml  deploy.yml  python-app.yml
core/: __init__.py  defence.py  drawbridge_executor.py
drawbridge/: __init__.py  default_drawbridge_executor.py  drawbridge.py  pyproject.toml  requirements.txt
keep/: __init__.py  remote_keep.py
prompt_defender/: README.md  example.py  pyproject.toml
prompt_defender/core/: __init__.py
prompt_defender/drawbridge/: default_drawbridge_executor.py
prompt_defender/prompt_defender/: __init__.py
prompt_defender/prompt_defender/core/: defence.py  drawbridge_executor.py  keep_executor.py  wall_executor.py
prompt_defender/prompt_defender/keep/: remote_keep.py
prompt_defender/prompt_defender/tests/: test_defence.py  test_drawbridge_executor.py  test_keep_executor.py  test_prompt_defender_client.py  test_prompt_validator.py  test_wall.py  test_xml_scanner.py
prompt_defender/prompt_defender/wall/: __init__.py  badwords_checker.py  prompt_defender_client.py  prompt_validator.py  wall_executor.py  xml_scanner.py
prompt_defender/tests/: test_defence.py  test_xml_scanner.py
prompt_defender/wall/: example.py
prompt_defender_aws_defences/: README.md  example.py  pyproject.toml
prompt_defender_aws_defences/prompt_defender_aws_defences/: __init__.py
prompt_defender_aws_defences/prompt_defender_aws_defences/tests/: test_pii_detection.py  test_shared.py
prompt_defender_aws_defences/prompt_defender_aws_defences/wall/: __init__.py  pii_detection.py  sagemaker_inference.py  shared.py
prompt_defender_llm_defences/: README.md  __init__.py  example.py  pyproject.toml
prompt_defender_llm_defences/keep/: keep_langchain.py
prompt_defender_llm_defences/prompt_defender_llm_defences/: __init__.py
prompt_defender_llm_defences/prompt_defender_llm_defences/keep/: __init__.py  keep_langchain.py
prompt_defender_llm_defences/prompt_defender_llm_defences/tests/: config.py  test_llm_based_prehand.py  test_paraphrasing_defence.py  test_proactive_defence.py
prompt_defender_llm_defences/prompt_defender_llm_defences/wall/: __init__.py  llm_prehand_defence.py  paraphrasing_defence.py  prehand_wall.py  proactive_defence.py
scripts/: build.sh  deploy-prod.sh  deploy.sh  generate_documentation.sh  set_version.py  tests.sh  update_versions.sh
specialised_defences/: requirements.txt
specialised_defences/specialised_defences/: generate.py
src/wall/: wall_builder.py  wall_executor.py
tests/: __init__.py  test_defence.py  test_prompt_defender_client.py  test_prompt_validator.py  test_xml_scanner.py  wall_test.py
wall/: __init__.py  main.py  prompt_defender_client.py  prompt_defender_client_rapidapi.py  prompt_validator.py  pyproject.toml  remote_wall_checker.py  requirements.txt  test_prompt_validator.py  test_xml_scanner.py  wall.py  wall_builder.py  wall_executor.py  xml_scanner.py
wall/src/: example.py  test_prompt_validator.py  wall_test.py  xml_scanner.py
