[project]
name = "prompt-defender"
version = "0.0.22"
authors = [
    { name = "Daniel Llewellyn", email = "admin@safetorun.com" },
]
dependencies = [
    "annotated-types==0.6.0",
    "certifi==2024.2.2",
    "charset-normalizer==3.3.2",
    "dataclasses-json==0.6.4",
    "exceptiongroup==1.2.0",
    "idna==3.6",
    "iniconfig==2.0.0",
    "marshmallow==3.21.0",
    "mypy-extensions==1.0.0",
    "packaging==23.2",
    "pluggy==1.4.0",
    "pydantic==2.6.3",
    "pydantic_core==2.16.3",
    "requests==2.31.0",
    "six==1.16.0",
    "tomli==2.0.1",
    "typing-inspect==0.9.0",
    "typing_extensions==4.10.0",
    "urllib3==2.2.1",
    "bleach==6.1.0"
]
description = "Prompt Defender. A package to help you defend against prompt injection attacks."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/safetorun/PromptDefender-py"
Issues = "https://github.com/safetorun/PromptDefender-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["wall", "drawbridge"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

