[project]
name = "prompt-defender"
version = "0.0.28"
authors = [
    { name = "Daniel Llewellyn", email = "admin@safetorun.com" },
]
dependencies = [
    "dataclasses-json==0.6.4",
    "pydantic==2.6.3",
    "pydantic_core==2.16.3",
    "requests==2.31.0",
    "bleach==6.1.0"
]
description = "Prompt Defender. A package to help you defend against prompt injection attacks."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/safetorun/PromptDefender-py"
Issues = "https://github.com/safetorun/PromptDefender-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["wall", "drawbridge"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

