[project]
name = "PromptDefender-wall"
version = "0.0.10"
authors = [
    { name="Daniel Llewellyn", email="admin@safetorun.com" },
]
description = "Prompt Defender - Wall. A package to help you defend against prompt injection attacks."
readme = "../README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/safetorun/PromptDefender-py"
Issues = "https://github.com/safetorun/PromptDefender-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
